--- a/ml2 tasks/app/Dockerfile
+++ b/ml2 tasks/app/Dockerfile
@@ -11,4 +11,4 @@ COPY . /app
 
 EXPOSE 8000
 #change the host or server to requirements, then build
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
